--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1698,6 +1698,30 @@
 
         <!-- Banner 3 -->
 
+
+        <section class="relative w-full h-auto md:h-48 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white"> 
+    <div class="w-full md:w-1/2 h-40 md:h-full bg-cover bg-center" 
+        style="background-image: url('../img/hpy.webp');">
+    </div>
+
+    <div class="w-full md:w-1/2 flex items-center justify-center p-6 md:p-8">
+        <div class="text-gray-900 text-center flex flex-col items-center w-full">
+            <h3 class="text-2xl font-semibold mb-1">Chef's Special</h3>
+            <p class="text-base mb-4 text-gray-600 leading-tight">
+                Try our signature lobster bisque today!
+            </p>
+            <button class="bg-orange-500 text-white font-bold px-6 py-2 rounded-full text-sm hover:bg-orange-600 transition-all shadow-sm active:scale-95">
+                View Details
+            </button>
+        </div>
+    </div>
+</section>
+
+
+ 
+
+
+
         <section class="relative w-full h-auto md:h-72 rounded-[2rem] border border-gray-200 overflow-hidden mb-6 flex flex-col md:flex-row bg-white"> 
             <div class="w-full md:w-1/2 h-64 md:h-full bg-cover bg-center" 
                 style="background-image: url('../img/hpy.webp');">
